# Protovox

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: app_state.rs  application.rs  camera.rs  capture_state.rs  chunk_manager.rs  components.rs  core_workloads.rs  environment.rs  gamemode.rs  inventory.rs  last_world_interaction.rs  lib.rs  logging.rs  looking_at_block.rs  main.rs  movement.rs  render_distance.rs  run.rs  state.rs
client/src/application/: build_workloads.rs  capture_state.rs  core_workloads.rs  input.rs  mod.rs  resize.rs
client/src/chunks/: chunk_manager.rs  client_chunk.rs  mod.rs  raycast.rs
client/src/events/: event_bus.rs  mod.rs  render_distance.rs
client/src/input/: action_map.rs  mod.rs  mouse_manager.rs
client/src/multiplayer/: client_connection.rs  server_connection.rs
client/src/networking/: chat.rs  keep_alive.rs  mod.rs  server_connection.rs  server_handler.rs  server_socket.rs  types.rs
client/src/physics/: collision_response.rs  mod.rs  movement.rs
client/src/render/: camera.rs  camera_uniform_buffer.rs  graphics_context.rs  instance.rs  mod.rs  renderer.rs  state.rs  texture.rs
client/src/rendering/: base_face.rs  block_outline.rs  camera_uniform_buffer.rs  chunk_mesh.rs  chunk_pos_uniform_buffer.rs  depth_texture.rs  egui.rs  face_buffer.rs  face_data.rs  gizmos.rs  graphics_context.rs  instance.rs  mod.rs  render.rs  renderer.rs  shader.wgsl  shader_cam.rs  skybox.rs  spritesheet.rs  texture.rs  texture_atlas.rs  vertex.rs  voxel_renderable.rs  world.rs
client/src/rendering/egui/: mod.rs
client/src/rendering/gizmos/: line_render_state.rs  mod.rs  types.rs  vertex.rs
client/src/rendering/render/: block_outline.rs  egui.rs  gizmos.rs  mod.rs  skybox.rs  world.rs
client/src/rendering/shaders/: gizmos_lines.wgsl  shader.wgsl  skybox.wgsl  world.wgsl
client/src/rendering/world/: base_face.rs  mod.rs
client/src/run/: core_workloads.rs  input.rs  lost_focus.rs  mod.rs  resize.rs
client/src/workloads/: dino.rs  mod.rs  shutdown.rs  startup.rs  update.rs
client/src/world_gen/: debug.rs  fractal_noise.rs  mod.rs  params.rs  spline.rs  world_gen_params.rs
client/src/world_gen/biomes/: mod.rs  settings.rs
client/src/world_gen_debugger/: mod.rs  params.rs  render.rs  spline_editor.rs
dino_plugins/: Cargo.toml
dino_plugins/src/: engine.rs  ident.rs  lib.rs  path.rs
engine/: Cargo.toml
engine/assets/model/: cobblestone.json  cube.json  cube_all.json  debug.json  dirt.json  grass.json  stone.json
engine/assets/structures/: test_tree.structure
engine/src/: args.rs  block_bar_display.rs  block_bar_focus.rs  components.rs  environment.rs  handle.rs  instance.rs  interact.rs  inventory.rs  last_world_interaction.rs  lib.rs  looking_at_block.rs  main.rs  save.rs  structures.rs
engine/src/application/: capture_state.rs  delta_time.rs  exit.rs  input.rs  mod.rs  pause.rs  plugin_manager.rs
engine/src/base_types/: block.rs  mod.rs  texture.rs
engine/src/chunks/: chunk_manager.rs  client_chunk.rs  raycast.rs
engine/src/entity/: mod.rs  model.rs
engine/src/events/: event_bus.rs  mod.rs
engine/src/game/: face_type.rs  location.rs  mod.rs
engine/src/game/chunk/: adjacent.rs  data.rs  location.rs  mod.rs  pos.rs
engine/src/input/: action_map.rs  mod.rs  mouse_manager.rs
engine/src/networking/: keep_alive.rs  mod.rs  server_connection.rs  server_handler.rs
engine/src/physics/: collision.rs  collision_response.rs  mod.rs  movement.rs
engine/src/renderer/: graphics.rs  mod.rs
engine/src/rendering/: block_outline.rs  chunk_mesh.rs  depth_texture.rs  entity.rs  face_data.rs  graphics_context.rs  gui_bundle.rs  mod.rs  model_render.rs  shader_cam.rs  sized_buffer.rs  skybox.rs  texture.rs  texture_atlas.rs  world.rs
engine/src/rendering/math/: base_face.rs  mod.rs  vertex.rs
engine/src/rendering/render/: block_outline.rs  egui.rs  entity.rs  mod.rs  skybox.rs  world.rs
engine/src/rendering/shaders/: entity.wgsl  gizmos_lines.wgsl  world.wgsl
engine/src/rendering/world/: mod.rs  vertex.rs
engine/src/workloads/: mod.rs  shutdown.rs  startup.rs  update.rs
engine/src/world_gen/: mod.rs  params.rs
engine_old/src/: block_bar_focus.rs  camera.rs  components.rs  interact.rs
engine_rendering/: Cargo.toml
engine_rendering/src/: lib.rs
game/: Cargo.toml
game/src/: inventory.rs  item.rs  lib.rs  location.rs  texture_ids.rs  textures.rs
game/src/block/: def.rs  dyn_block.rs  face_type.rs  mod.rs
game/src/chunk/: adjacent.rs  data.rs  location.rs  mod.rs  pos.rs
packet/: Cargo.toml
packet/src/: error.rs  header.rs  lib.rs  packet.rs
packet_derive/: Cargo.toml
plugins/base_types/: Cargo.toml
plugins/base_types/assets/blocks/: test.json
plugins/base_types/proc_types/: Cargo.toml
plugins/base_types/proc_types/src/: lib.rs
plugins/base_types/src/: block.rs  item.rs  lib.rs  main.rs  texture.rs
plugins/debug_ui/: Cargo.toml
plugins/debug_ui/src/: lib.rs
plugins/egui_systems/: Cargo.toml
plugins/egui_systems/src/: lib.rs  renderer.rs
plugins/egui_systems/src/plugin/: frame.rs  mod.rs  order.rs  render.rs
plugins/game_ui/: Cargo.toml
plugins/game_ui/src/: block_bar.rs  bottom_bar.rs  debug.rs  egui_views.rs  gui_bundle.rs  inventory.rs  item_stack.rs  lib.rs  pause.rs
plugins/game_ui/src/block_bar/: display.rs  mod.rs  render.rs
plugins/game_ui/src/inventory/: hand.rs  mod.rs  render.rs
plugins/gizmos/: Cargo.toml
plugins/gizmos/src/: lib.rs  plugin.rs  types.rs
plugins/gizmos/src/plugin/: line_render_state.rs  lines.wgsl  mod.rs  render.rs  settings.rs  update.rs  vertex.rs
plugins/networking/: Cargo.toml
plugins/networking/src/: lib.rs  type_id.rs
plugins/resources/: Cargo.toml
plugins/resources/src/: key.rs  lib.rs  main.rs  registry.rs  resource_type.rs  type.rs
plugins/structure_saver/: Cargo.toml
plugins/structure_saver/src/: lib.rs
plugins/visual_debug/: Cargo.toml
plugins/visual_debug/src/: lib.rs
renderer/: Cargo.toml
server/: Cargo.toml
splines/: Cargo.toml
src/: main.rs
uuid-identity/: Cargo.toml
(+26 files in other folders)
