[workspace]
resolver = "2"
members = ["client", "game", "packet", "packet_derive", "splines"]

[workspace.package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"
authors = ["BlackNinja745 Studios <blackninja745studiosmanagement@gmail.com>"]

[workspace.dependencies]
nalgebra = { version = "0.33.2", features = ["serde-serialize", "bytemuck"] }
nalgebra-glm = "0.19.0"
thiserror = "2.0.3"
shipyard = "0.7.4"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
serde = { version = "1.0.209", features = ["derive"] }

[workspace.lints.clippy]
unwrap_used = "warn"
too_many_arguments = "allow"
print_stdout = "warn"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2