[workspace]
resolver = "2"
members = [
    "engine",
    "dino_plugins",
    "game",
    "packet",
    "packet_derive",
    "splines",
    "client",

    "plugins/*"
]

[workspace.package]
name = "protovox"
version = "0.1.0"
description = "An optimized, ECS based, multiplayer game engine prototype written in Rust. Intended to recreate the RPG experience of heavily modded Minecraft."
readme = true
license = "GPL-3.0"
edition = "2024"
keywords = ["game-engine", "voxel"]
categories = ["game-engines"]
repository = "https://github.com/dinoslice/Protovox/"
authors = [
    "dinoslice Development Team <dev@dinoslice.com>",
    "abscosmos <joshua@dinoslice.com>",
    "MSKatKing <mark@dinoslice.com>",
]
publish = false

[workspace.dependencies]
nalgebra = { version = "0.33.2", features = ["serde-serialize", "bytemuck"] }
nalgebra-glm = "0.19.0"
thiserror = "2.0.3"
shipyard = "0.7.4"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
serde = { version = "1.0.209", features = ["derive"] }
tracing = "0.1.40"

[workspace.lints.clippy]
unwrap_used = "warn"
too_many_arguments = "allow"
print_stdout = "warn"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2
