[package]
name = "client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std", "chrono"] }
chrono = "0.4.38"
winit = "0.29.15" # temporarily using older version, switch to newer version later
wgpu = "0.20.1"
shipyard = { workspace = true }
engine = { path = "../engine" }

[lints]
workspace = true
