[package]
name = "dino_plugins"
version = "0.1.0"
description = "Framework for writing plugins for protovox engine"
license.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
shipyard = { workspace = true }
strck = { version = "1.0.0", features = ["ident", "serde"] }
thiserror = { workspace = true }

[lints]
workspace = true
