[package]
name = "game"
version = "0.1.0"
description = "Types and primitives for protovox game"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
thiserror = { workspace = true }
shipyard = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
num-traits = "0.2.19"
derive_more = { version = "1.0.0", features = ["add", "from"] }
rand = "0.8.5"
static_assertions = "1.1.0"
serde_with = "3.12.0"

[lints]
workspace = true
