[package]
name = "packet"
version = "0.1.0"
description = "Custom packet system for protovox engine"
license.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
flate2 = "1.0.33"
postcard = { version = "1.0.10", features = ["alloc", "use-std"] }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
