[package]
name = "game_ui"
version = "0.1.0"
description = "Ingame UI for protovox game"
license.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
dino_plugins = { path = "../../dino_plugins" }
strck = "1.0.0"
engine = { path = "../../engine" }
game = { path = "../../game" }
shipyard = { workspace = true }
egui_systems = { path = "../egui_systems" }
egui = "0.28.1"
wgpu = "0.20.1"
nalgebra-glm = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
