[package]
name = "resources"
version = "1.0.0"
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
custom_types = []
full = [ "custom_types" ]

[dependencies]
dino_plugins = { path = "../../dino_plugins" }
strck = "1.0.0"
thiserror.workspace = true
shipyard = { workspace = true }
serde = { version = "1.0.214", features = ["derive"] }
