[package]
name = "structure_saver"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
dino_plugins = { path = "../../dino_plugins" }
strck = "1.0.0"
engine = { path = "../../engine" }
game = { path = "../../game" }
shipyard = { workspace = true }
egui_systems = { path = "../egui_systems" }
gizmos = { path = "../gizmos" }
egui = "0.28.1"
nalgebra-glm = "0.19.0"
tracing = "0.1.40"
postcard = "1.1.1"

[lints]
workspace = true
