[package]
name = "visual_debug"
version = "0.1.0"
description = "Debug systems for protovox engine"
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dino_plugins = { path = "../../dino_plugins" }
strck = "1.0.0"
engine = { path = "../../engine" }
shipyard = { workspace = true }
gizmos = { path = "../gizmos" }
game = { path = "../../game" }
nalgebra-glm = { workspace = true }

[lints]
workspace = true
